# Logc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.c  lib_example.c  lib_example.py
logc/: log.c  log.h  log.py
